# MiniVM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  manage.py
include/: vm.h
src/: vm.cpp
tests/: vm_test.cpp
